@@ -2,7 +2,7 @@ Source: glibc
 Section: libs
 Priority: required
 Build-Depends: gettext, dpkg (>= 1.18.7), dpkg-dev (>= 1.17.14), xz-utils, file, quilt,
- autoconf, gawk, debhelper (>= 10), rdfind, symlinks, netbase, gperf, bison,
+ autoconf, gawk, debhelper (>= 12.5), rdfind, symlinks, netbase, gperf, bison,
  linux-libc-dev (>= 3.9) [linux-any],
  libaudit-dev [linux-any], libcap-dev [linux-any], libselinux-dev [linux-any],
  mig (>= 1.5-3) [hurd-i386], gnumach-dev (>= 2:1.8+git20181103-1~) [hurd-i386],
