@@ -3,6 +3,11 @@ glibc (2.29-0experimental1) UNRELEASED; urgency=medium
   [ Aurelien Jarno ]
   * debian/patches/hurd-i386/submitted-net.diff: rebase.
   * debian/patches/hurd-i386/local-fix-nss.diff: rebase.
+  * debian/control.in/main: build-depends on debhelper (>= 12.5) to get
+    automatic udeb support.
+  * debian/rules.d/debhelper.mk: build the udeb packages first, drop call to
+    debian/shlibs-add-udebs.
+  * debian/shlibs-add-udebs: removed, not used anymorre.
 
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 16 Aug 2019 18:18:15 +0200
 
